<resources>
    <string name="app_name">GymTracker</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Log In failed"</string>
    <string name="title_activity_splash_screen" translatable="false">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login">Log In</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="not_registered">Not yet registered? SignUp Now </string>
    <string name="more_info">More Info</string>
    <string name="age">Age</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="next">Next</string>
    <string name="plus">plus</string>
    <string name="minus">minus</string>
    <string name="_0cm">0cm</string>
    <string name="_50">50</string>
    <string name="_19">19</string>
    <string name="_18_5_25_kg_m2">18.5 – 25 kg/m²</string>
    <string name="normal_bmi_range">Normal BMI range:</string>
    <string name="recalculate">Recalculate your BMI</string>
    <string name="calculate">Calculate your BMI</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="your_result">Your Result</string>
    <string name="cm">cm</string>
    <string name="share">share your Result</string>
    <string name="your_age">your Age:</string>
    <string name="resPass">Submit</string>
    <string name="forgot">Retrieve your password</string>
    <string name="login_with_google">login with google</string>
    <string name="default_web_client_id">1069417755670-1elajudruc0vq1d7bfo16tqf3pl04vui.apps.googleusercontent.com</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_gyms">Gyms</string>
    <string name="title_store">Store</string>
    <string name="title_settings">Settings\n</string>
    <string name="title_add">Add</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_routines">Your Routines</string>
    <string name="muscular_groups">Muscular Groups\n</string>
    <string name="back">Back</string>
    <string name="chest">Chest</string>
    <string name="arms">Arms</string>
    <string name="legs">Legs</string>
    <string name="shoulders">Shoulders</string>
    <string name="abs">Abs</string>
    <string name="exercises">Exercises</string>
    <string name="description">Description:</string>
    <string name="group">Group:</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="very_severely_underweight">Very severely underweight</string>
    <string name="severely_underweight">Severely underweight</string>
    <string name="underweight">Underweight</string>
    <string name="normal_weight">Normal weight</string>
    <string name="overweight">Overweight</string>
    <string name="moderately_obese">Moderately obese</string>
    <string name="severely_obese">Severely obese</string>
    <string name="very_severely_obese">Very severely obese</string>
    <string name="underweight_suggestion">A BMI of under 18.5 indicates that a person has insufficient weight, so they may need to put on some weight. They should ask a doctor or dietitian for advice.</string>
    <string name="normal_weight_suggestion">A BMI of 18.5–24.9 indicates that a person has a healthy weight for their height. By maintaining a healthy weight, they can lower their risk of developing serious health problems.</string>
    <string name="overweight_suggestion">A BMI of 25–29.9 indicates that a person is slightly overweight. A doctor may advise them to lose some weight for health reasons. They should talk with a doctor or dietitian for advice.</string>
    <string name="obese_suggestion">A BMI of over 30 indicates that a person has obesity. Their health may be at risk if they do not lose weight. They should talk with a doctor or dietitian for advice.</string>
    <string name="severe_thinness">Severe Thinness</string>
    <string name="moderate_thinness">Moderate Thinness\n</string>
    <string name="mild_thinness">Mild Thinness</string>
    <string name="profile_name">"Name: "</string>
    <string name="profile_email">"Email: "</string>
    <string name="profile_age">"Age: "</string>
    <string name="profile_your_bmi">"Your BMI: "</string>
    <string name="profile_weight">"Weight: "</string>
    <string name="profile_height">"Height: "</string>
    <string name="save">Save changes</string>
    <string name="no_routines">No routines available</string>
    <string name="failed_update_user">Failed to update user information</string>
    <string name="location_granted">Location permission granted</string>
    <string name="add_gym_fav">Gym added to favorites</string>
    <string name="error_gym_fav">Error adding gym to favorites</string>
    <string name="muscle_group_back">Back</string>
    <string name="muscle_group_chest">Chest</string>
    <string name="muscle_group_arms">Arms</string>
    <string name="muscle_group_legs">Legs</string>
    <string name="muscle_group_shoulders">Shoulders</string>
    <string name="muscle_group_abs">Abs</string>
    <string name="fill_all_fields">Please fill all the fields</string>
    <string name="pass_short">Password must be at least 6 characters long</string>
    <string name="pass_dont_match">Passwords do not match</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="username_exists">Username already exists.</string>
    <string name="profile_updated">Profile updated.</string>
    <string name="error_update_profile">Error updating profile.</string>
    <string name="all">All</string>
    <string name="selected_exercises">Selected Exercises</string>
    <string name="available_exercises">Available Exercises</string>
    <string name="days">Days</string>
    <string name="exerciseimage">ExerciseImage</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="logout">Log Out</string>
    <string name="issue">Issue</string>
    <string name="issue_description">Issue Description</string>
    <string name="send">Send</string>
    <string name="help">Contact us</string>
    <string name="your_progress">Your Progress</string>
    <string name="gymtracker">GymTracker</string>
    <string name="remove">Remove From Favs</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="fav_gyms">Favorite Gyms</string>
    <string name="routine_name">Routine Name</string>
    <string name="enter_routine_name">Enter Routine Name</string>
    <string name="new_routine">New Routine</string>
    <string name="save_routine">Save Routine</string>
    <string name="weight_notifications">Weekly weighing notifications</string>
    <string name="no_exercises">No exercises for this day</string>
    <string name="store">Store</string>
    <string name="nutrition">Nutrition</string>
    <string name="creatine">Creatine</string>
    <string name="protein">Protein</string>
    <string name="preworkout">Pre-Workout</string>
    <string name="accessories">Accessories</string>
    <string name="straps">Straps</string>
    <string name="shakers">Shakers</string>
    <string name="towels">Towels</string>
    <string name="wristbands">Wristbands</string>
    <string name="category_accessories">accessories</string>
    <string name="category_nutrition">nutrition</string>
    <string name="hsn">HSN</string>
    <string name="myprotein">MyProtein</string>
    <string name="prozis">Prozis</string>
    <string name="productimage">Product Image</string>
    <string name="failed_to_write_document">Failed to write document</string>
    <string name="address_not_available">Address not available</string>
    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>