<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/issueTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/issue"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/issue_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/issue"
        android:textColorHint="@color/white"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/issueDescriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/issue_description"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/issue_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/issue_description"
        android:inputType="textMultiLine"
        android:minLines="4"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>

    <Button
        android:id="@+id/send_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_marginTop="16dp" />

</LinearLayout>